tabbar icon + restaurant modification
